--- a/detail.html
+++ b/detail.html
@@ -17,7 +17,7 @@
 <body>
   <header>
     <!-- nav bar -->
-    <nav class="container-navbar">
+    <nav class="container-fluid-navbar">
       <div class="img-logo">
         <img src="./assets/img/Logo_Amazing_Events.png" alt="Logo Amazing Events" class="logo">
       </div>
@@ -32,7 +32,7 @@
       </div>
     </nav>
   </header>
-  <main>
+  <main class="main">
     <div class="container-principal">
       <div class="row">
         <div class="col d-flex card-big">
@@ -40,14 +40,14 @@
             <img src="./assets/img/Marathon.jpg" alt="People running a marathon" class="img-card-big">
           </div>
           <div class="card-i">
-            <h2>Title</h2>
+            <h2 class="title">Title</h2>
             <ul>
               <li>date:</li>
               <li>description:</li>
               <li>category:</li>
               <li>place:</li>
               <li>capacity:</li>
-              <li>Assistance or estimate:</li>
+              <li>Assistance:</li>
               <li>Price:</li>
             </ul>
           </div>
