--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 <body>
   <header>
     <!-- nav bar -->
-    <nav class="container-navbar">
+    <nav class="container-fluid-navbar">
       <div class="img-logo">
         <img src="./assets/img/Logo_Amazing_Events.png" alt="Logo Amazing Events" class="logo">
       </div>
@@ -32,8 +32,8 @@
       </div>
     </nav>
     <!-- carousel -->
-    <div class="container-carousel">
-      <div class="row">
+    <div class="container-fluid-carousel">
+      <div class="row" style="--bs-gutter-x:0">
         <div class="col d-flex justify-content-between">
           <a href=""><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-arrow-bar-left" viewBox="0 0 16 16">
             <path fill-rule="evenodd" d="M12.5 15a.5.5 0 0 1-.5-.5v-13a.5.5 0 0 1 1 0v13a.5.5 0 0 1-.5.5ZM10 8a.5.5 0 0 1-.5.5H3.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L3.707 7.5H9.5a.5.5 0 0 1 .5.5Z"/>
