--- a/events-up.html
+++ b/events-up.html
@@ -17,7 +17,7 @@
 <body>
   <header>
     <!-- nav bar -->
-    <nav class="container-navbar">
+    <nav class="container-fluid-navbar">
       <div class="img-logo">
         <img src="./assets/img/Logo_Amazing_Events.png" alt="Logo Amazing Events" class="logo">
       </div>
@@ -32,8 +32,8 @@
       </div>
     </nav>
     <!-- carousel -->
-    <div class="container-carousel">
-      <div class="row">
+    <div class="container-fluid-carousel">
+      <div class="row" style="--bs-gutter-x:0">
         <div class="col d-flex justify-content-between">
           <a href=""><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-arrow-bar-left" viewBox="0 0 16 16">
             <path fill-rule="evenodd" d="M12.5 15a.5.5 0 0 1-.5-.5v-13a.5.5 0 0 1 1 0v13a.5.5 0 0 1-.5.5ZM10 8a.5.5 0 0 1-.5.5H3.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L3.707 7.5H9.5a.5.5 0 0 1 .5.5Z"/>
@@ -76,43 +76,20 @@
         </form>
       </div>
     </nav>
-    <!-- cards row1 -->
-    <div class="container-card d-flex">
-      <!-- card1 -->
-      <div class="card" style="width: 18rem;">
+  <!-- cards -->
+  <div class="container-fluid d-flex">
+    <div class="cards">
+      <div class="card" id="card1" style="width: 20rem;">
         <div class="cont-img-card">
-          <img src="./assets/img/Cinema.jpg" class="card-img-top" alt="Cinema">
-        </div>
-          <div class="card-body">
-            <h5 class="card-title">Cinema</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <div class="d-flex justify-content-between">
-            <p class="card-text">Price: $ 00000</p>
-            <a href="#" class="btn btn-success">See more</a>
-          </div>
-        </div>
-      </div>
-      <!-- card2 -->
-      <div class="card" style="width: 18rem;">
-        <div class="cont-img-card">
-          <img src="./assets/img/Food_Fair.jpg" class="card-img-top" alt="Food fair">
+              <img src="./assets/img/Cinema.jpg" class="card-img-top" alt="Cinema">
         </div>
         <div class="card-body">
-          <h5 class="card-title">Food fair</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <div class="d-flex justify-content-between">
-            <p class="card-text">Price: $ 00000</p>
-            <a href="#" class="btn btn-success">See more</a>
-          </div>
-        </div>
-      </div>
-      <!-- card3 -->
-      <div class="card" style="width: 18rem;">
-        <div class="cont-img-card">
-          <img src="./assets/img/Music_Concert.jpg" class="card-img-top" alt="Music concert">
-        </div>
-        <div class="card-body">
-          <h5 class="card-title">Music concert</h5>
+          <h5 class="card-title">Cinema</h5>
+          <h6 class="card-title">Date</h6>
+          <h6 class="card-title">Category</h6>
+          <h6 class="card-title">Place</h6>
+          <p class="card-text">Capacity</p>
+          <p class="card-text">Assistance</p>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           <div class="d-flex justify-content-between">
             <p class="card-text">Price: $ 00000</p>
@@ -121,51 +98,7 @@
         </div>
       </div>
     </div>
-    <!-- cards row2 -->
-    <div class="container-card d-flex">
-      <!-- card1 -->
-        <div class="card" style="width: 18rem;">
-          <div class="cont-img-card">
-            <img src="./assets/img/Costume_Party.jpg" class="card-img-top" alt="Costume party">
-          </div>
-          <div class="card-body">
-            <h5 class="card-title">Costume party</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <div class="d-flex justify-content-between">
-              <p class="card-text">Price: $ 00000</p>
-              <a href="#" class="btn btn-success">See more</a>
-            </div>
-          </div>
-        </div>
-        <!-- card2 -->
-        <div class="card" style="width: 18rem;">
-            <div class="cont-img-card">
-              <img src="./assets/img/Museum_Tour.jpg" class="card-img-top" alt="Museum tour">
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">Museum tour</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <div class="d-flex justify-content-between">
-                <p class="card-text">Price: $ 00000</p>
-                <a href="#" class="btn btn-success">See more</a>
-              </div>
-            </div>
-          </div>
-          <!-- card3 -->
-          <div class="card" style="width: 18rem;">
-            <div class="cont-img-card">
-              <img src="./assets/img/Marathon.jpg" class="card-img-top" alt="Marathon">
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">Marathon</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <div class="d-flex justify-content-between">
-                <p class="card-text">Price: $ 00000</p>
-                <a href="#" class="btn btn-success">See more</a>
-              </div>
-            </div>
-          </div>
-        </div>
+  </div>
   </main>
   <footer>
     <!--social  -->
@@ -187,6 +120,10 @@
       <h2>FE04-TN</h2>
     </div>
   </footer>
+    <!-- linkJS DATA -->
+    <script src="./js/data.js"></script>
+    <!-- linkJS1 -->
+    <script src="./js/e-up.js"></script>
   <!-- Link Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
