--- a/detail.html
+++ b/detail.html
@@ -35,23 +35,23 @@
   <main class="main">
     <div class="container-principal">
       <div class="row">
-        <div class="col d-flex card-big">
+        <!-- <div class="col d-flex card-big">
           <div class="card-i">
             <img src="./assets/img/Marathon.jpg" alt="People running a marathon" class="img-card-big">
           </div>
           <div class="card-i">
-            <h2 class="title">Title</h2>
+            <h2 class="title">Name</h2>
             <ul>
-              <li>date:</li>
-              <li>description:</li>
               <li>category:</li>
+              <li>date:</li>
               <li>place:</li>
               <li>capacity:</li>
               <li>Assistance:</li>
+              <li>description:</li>
               <li>Price:</li>
             </ul>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </main>
@@ -75,6 +75,10 @@
       <h2>FE04-TN</h2>
     </div>
     </footer>
+  <!-- linkJS DATA -->
+  <script src="./js/data.js"></script>
+  <!-- linkJS1 -->
+  <script src="./js/detail.js"></script>  
   <!-- Link Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
