--- a/events-up.html
+++ b/events-up.html
@@ -50,11 +50,11 @@
     <!-- Buscador checkbox -->
     <nav class="navbar bg-body-tertiary">
       <div class="container" id="form-categ">
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-          <label class="form-check-label" for="inlineCheckbox1">Category</label>
+        <div class="form-check form-check-inline caja">
+          <!-- <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+          <label class="form-check-label" for="inlineCheckbox1">Category</label> -->
         </div>
-        <div class="form-check form-check-inline">
+        <!-- <div class="form-check form-check-inline">
           <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
           <label class="form-check-label" for="inlineCheckbox2">Category</label>
         </div>
@@ -69,17 +69,17 @@
         <div class="form-check form-check-inline">
           <input class="form-check-input" type="checkbox" id="inlineCheckbox5" value="option5">
           <label class="form-check-label" for="inlineCheckbox3">Category</label>
-        </div>
+        </div> -->
         <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
+          <input class="form-control me-2" type="search" id="inputSearch" placeholder="Search" aria-label="Search">
+          <button class="btn btn-success" id="button">Search</button>
         </form>
       </div>
     </nav>
   <!-- cards -->
   <div class="container-fluid d-flex">
     <div class="cards">
-      <div class="card" id="card1" style="width: 20rem;">
+      <!-- <div class="card" id="card1" style="width: 20rem;">
         <div class="cont-img-card">
               <img src="./assets/img/Cinema.jpg" class="card-img-top" alt="Cinema">
         </div>
@@ -96,7 +96,7 @@
             <a href="#" class="btn btn-success">See more</a>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
   </main>
