--- a/events-past.html
+++ b/events-past.html
@@ -121,7 +121,7 @@
     </div>
     </footer>
   <!-- Link data -->
-  <script src="./js/data.js"></script>
+  <!-- <script src="./js/data.js"></script> -->
   <!-- linkJS1 -->
   <script src="./js/e-past.js"></script>
   <!-- Link Bootstrap JS -->
